# pscal-core

./: CMakeLists.txt  README.md
docs/: object_layout.md  pscal_vm_builtins.md  pscal_vm_overview.md  pscalasm.md  pscaljson2bc.md
lib/noise/: noise.c  noise.h
plugins/examples/: hello_plugin.c
plugins/sqlite/: sqlite_ext_plugin.c
src/ast/: ast.c  ast.h  closure_registry.c  closure_registry.h
src/backend_ast/: audio.c  audio.h  builtin.c  builtin.h  builtin_network_api.c  builtin_network_api.h  builtin_network_api_stub.c  gl.c  gl.h  graphics_3d_backend.h  graphics_3d_backend_gl.c  graphics_3d_backend_ios.c  graphics_3d_metal_apple.h  graphics_3d_metal_apple.m  interpreter.c  interpreter.h  pscal_ext_api.c  pscal_ext_api.h  pscal_sdl_runtime.h  sdl.c  sdl.h  sdl3d.c  sdl_ios_dispatch.h  shell.c  shell_alias.c  shell_alias.h  shell_buffer.h  shell_help.c  shell_history.c  shell_runtime_stub.c  thread_wrappers.c  thread_wrappers.h
src/backend_ast/shell/: shell_builtins.inc  shell_command_utils.inc  shell_execution.inc  shell_runtime_state.inc  shell_word_expansion.inc
src/common/: ast_shared.c  ast_shared.h  builtin_shared.c  builtin_shared.h  env_snapshot.c  env_snapshot.h  frontend_kind.c  frontend_kind.h  frontend_symbol_aliases.h  frontend_symbol_wrappers.c  pascal_state.c  pascal_state.h  path_truncate.c  path_truncate.h  path_virtualization.c  path_virtualization.h  pscal_hosts.c  pscal_hosts.h  pscal_terminal_host.c  runtime_clipboard.c  runtime_clipboard.h  runtime_params.c  runtime_paths.c  runtime_tty.c  runtime_tty.h  smallclue_applets_stub.c
src/compiler/: bytecode.c  bytecode.h  bytecode_link.c  bytecode_link.h  bytecode_verify.c  bytecode_verify.h  compiler.c  compiler.h  opcodes.def
src/core/: build_info.h  cache.c  cache.h  compiled_function.h  diagmap.c  diagmap.h  documented_units.h  effect_mask.h  globals.c  globals.h  list.c  list.h  obj_header.c  obj_header.h  preproc.c  preproc.h  pscal_paths.h  pscal_paths.h.in  sdl_headers.h  type_registry.c  type_registry.h  types.c  types.h  utils.c  utils.h  var_type.h  version.c  version.h
src/ext_builtins/: CMakeLists.txt  chudnovsky.c  dump.c  dump.h  fibonacci.c  getpid.c  mandelbrot.c  plugin_loader.c  plugin_loader.h  query_builtin.c  register.c  register.h  registry.c  registry.h  shell_frontend.c  swap.c
src/ext_builtins/graphics/: CMakeLists.txt  register.c
src/ext_builtins/math/: CMakeLists.txt  chudnovsky.c  factorial.c  fibonacci.c  mandelbrot.c  register.c
src/ext_builtins/openai/: CMakeLists.txt  openai_chat.c  register.c
src/ext_builtins/sqlite/: CMakeLists.txt  sqlite_builtins.c
src/ext_builtins/strings/: CMakeLists.txt  atoi.c  parse.c  register.c
src/ext_builtins/system/: CMakeLists.txt  fileexists.c  getcurrentdir.c  getpid.c  realtimeclock.c  register.c  swap.c  vm_version.c
src/ext_builtins/threed/: CMakeLists.txt  balls3d.c  register.c
src/ext_builtins/user/: CMakeLists.txt  balls3d.c  landscape.c  register.c  sierpinski_threads.c
src/ext_builtins/yyjson/: CMakeLists.txt  register.c  yyjson_builtins.c
src/lexer/: lexer.c  lexer.h
src/runtime/shaders/: shader_common.c  shader_common.h
src/runtime/shaders/sky/: cloud_layer.c  cloud_layer.h  sky_dome.c  sky_dome.h
src/runtime/shaders/terrain/: terrain_shader.c  terrain_shader.h
src/runtime/terrain/: terrain_generator.c  terrain_generator.h
src/runtime/vproc/: vproc.c  vproc.h  vproc_shim.h  vproc_stdio_shim.h  vproc_tree.c  vproc_tree.h
src/runtime/vproc/tty/: ish_compat.c  ish_compat.h  pscal_fd.c  pscal_fd.h  pscal_pty.c  pscal_pty.h  pscal_tty.c  pscal_tty.h  pscal_tty_host.c  pscal_tty_host.h
src/symbol/: symbol.c  symbol.h
src/vm/: ROADMAP_iPadOS.md  string_sentinels.h  vm.c  vm.h  vm_fx_policy.c  vm_fx_policy.h  vm_main.c
